Modified git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-/C:\SynapseDev\MicsaPCB2021\KiCAD_project_folder\Synaps_PCB_2021\Synaps_PCB_2021-backups
+#ignore backups
+/KiCAD_project_folder\Synaps_PCB_2021\Synaps_PCB_2021-backups
