Added basic PCB guidelines

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 #ignore backups
-/KiCAD_project_folder\Synaps_PCB_2021\Synaps_PCB_2021-backups
+/KiCAD_project_folder/Synaps_PCB_2021/Synaps_PCB_2021-backups/
